munch: overlays: set fingerprint sensor location
- Remove old lineage overlay while we are here.

Change-Id: Ic2b7552fed1866838f0801095e9ca8f03a9df143

--- a/rro_overlays/FrameworkResOverlay/res/values/config.xml
+++ b/rro_overlays/FrameworkResOverlay/res/values/config.xml
@@ -702,4 +702,8 @@
     <integer-array name="config_keyboardTapVibePattern">
         <item>40</item>
     </integer-array>
+
+    <!-- Indicates whether device has a power button fingerprint sensor. -->
+    <bool name="config_is_powerbutton_fps" translatable="false">true</bool>
+
 </resources>
