--- a/rro_overlays/SystemUIOverlay/res/values/dimens.xml
+++ b/rro_overlays/SystemUIOverlay/res/values/dimens.xml
@@ -13,6 +13,10 @@
 -->
 <resources>
 
+    <!-- The padding on the side of the navigation bar. Must be greater than or equal to
+         navigation_extra_key_width -->
+    <dimen name="navigation_side_padding">80px</dimen>
+
     <!-- The padding on the top of the statusbar (usually 0). -->
     <dimen name="status_bar_padding_top">1px</dimen>
 
@@ -32,5 +36,8 @@
     <!-- Location on the screen of the center of the physical power button. This is a reasonable
     default that should be overridden by device-specific overlays. -->
     <dimen name="physical_power_button_center_screen_location_y">@dimen/physical_fingerprint_sensor_center_screen_location_y</dimen>
+
+    <!-- Height of the status bar header bar when on Keyguard -->
+    <dimen name="status_bar_header_height_keyguard">@dimen/navigation_side_padding</dimen>    
 
 </resources>
