munch: overlay: Enable 5G SA and NSA
Change-Id: Icf55910aebae8d0ae519f0a0c20708aa81ae0bfc

--- a/rro_overlays/FrameworkResOverlay/res/values/config.xml
+++ b/rro_overlays/FrameworkResOverlay/res/values/config.xml
@@ -753,4 +753,10 @@
         <item>9</item> <!-- COLOR_MODE_DISPLAY_P3 -->
     </integer-array>
 
+    <!-- Whether the device enable the standalone (SA) mode of 5G NR.-->
+    <bool name="config_telephony5gStandalone">true</bool>
+
+    <!-- Whether the device enable the non-standalone (NSA) mode of 5G NR.-->
+    <bool name="config_telephony5gNonStandalone">true</bool>
+
 </resources>
