munch: set `config_netflixSpoofModel` to 22021211RG
Signed-off-by: sanjheevi <sanjheevisv@palladiumos.org>

--- a/rro_overlays/PalladiumFrameworkResOverlay/res/values/palladium_config.xml
+++ b/rro_overlays/PalladiumFrameworkResOverlay/res/values/palladium_config.xml
@@ -16,4 +16,7 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Device model (Build.MODEL) to spoof for netflix -->
+    <string name="config_netflixSpoofModel" translatable="false">22021211RG</string>
+
 </resources>
